# Moveit2_urdf_config

./: CMakeLists.txt  ConfigStart.rviz  README.md  package.xml  script.py
config/: controllers.yaml  fake_controllers.yaml  myfirst.srdf  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
launch/: moveit_cpp_tutorial.launch.py  moveit_cpp_tutorial.rviz
src/: moveit_cpp_tutorial.cpp
urdf/: myfirstURDF.urdf
